<resources>
    <string name="app_name">Portfolio</string>
    <string name="title">Title</string>
    <string name="odinakachi_nnuforole">Odinakachi Nnuforole</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="facebook_app_id">663267057801511</string>
    <string name="fb_login_protocol_scheme">fb663267057801511</string>
    <string name="signed_out" />
    <string name="google_status_fmt" />
    <string name="firebase_status_fmt" />
    <string name="description">Description</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_title">google title</string>
    <string name="name">Name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account, Login</string>

</resources>
